# oocore

./: .gitattributes  .gitignore  .gitmodules  Makefile  Makefile.am  OOCore.sln  OOCoreAPI.doxyfile  OOCore_vc10.sln  OOCore_vc71.sln  OOCore_vc8.sln  OOCore_vc9.sln  OOMake.mk.in  README  bootstrap.sh  config_oomake  config_oomake.ac  configure.ac  msvcconf.xml  oocore-autoconf.h.in
data/: Makefile.am  all_users.sql  common.sql  default_user.sql  ooserver.conf  system.sql  user_template.sql
include/: Makefile.am  autoconf.h.in
include/OOCore/: Apartment.h  Base.h  BaseTypes.h  Enum.h  Export.h  Http.h  Interfaces.h  Makefile.am  OOCore.h  OOCore_base.h  OOCore_export.h  OOCore_ifaces.h  OOCore_rtti.h  OOCore_rtti.inl  OOCore_type_sizes.h  OOCore_types.h  OOCore_types.inl  OOCore_wire.h  ROT.h  Registry.h  Remoting.h  Rtti.h  Rtti.inl  Safe.h  Safe.inl  SafePS.h  Service.h  Threading.h  Threading.inl  TypeSizes.h  Types.h  Types.inl  Version.h  Wire.h  Wire.inl  WirePS.h  config-gcc.h  config-guess.h  config-msvc.h  config-unix-gcc.h  (+7 more)
include/OOCore/Preprocessor/: base.h  comma.h  repeat.h  sequence.h  split.h  tuple.h
include/OOCore/internal/: base.h  config-borland.h  config-msvc.h  export.h  pre_base.h  repeat.h  sequence.h  split.h  threading.h  types.h
include/OONet/: Http.h
include/OTL/: Exception.h  Makefile.am  OTL.h  OTL.inl  OTL_special.h  Registry.h  Remoting.h
include/Omega/: Apartment.h  Compartment.h  IO.h  Notify.h  OOCore_version.h  Omega.h  Registry.h  Remoting.h  Service.h  TypeInfo.h  version.h
include/Omega/internal/: any.h  (+25 more)
src/OOBase/: Atomic.h  Buffer.cpp  Buffer.h  ByteSwap.h  CDRStream.h  CmdArgs.cpp  CmdArgs.h  Condition.cpp  Condition.h  DLL.cpp  DLL.h  Database.cpp  Database.h  Destructor.h  Error.cpp  Logger.cpp  Logger.h  Makefile.am  Mutex.cpp  Mutex.h  OOBase.cbp  OOBase_vc8.vcproj  OOBase_vc9.vcproj  OOSvrBase.cbp  OOSvrBase_vc8.vcproj  OOSvrBase_vc9.vcproj  Once.cpp  Once.h  PipeWin32.cpp  PosixSocket.cpp  PosixSocket.h  Proactor.cpp  Proactor.h  ProactorEv.cpp  ProactorEv.h  ProactorShmWin32.cpp  ProactorWin32.cpp  ProactorWin32.h  Queue.h  SQLite3_comp.c  (+29 more)
src/OOCore/: Activation.cpp  Activation.h  Activator.cpp  ApartmentImpl.cpp  ApartmentImpl.h  Array_Marshaller.h  Binding.cpp  Binding.h  CDRMessage.h  Channel.cpp  Channel.h  Channel_Handler.cpp  Channel_Handler.h  Client_Service.cpp  Client_Service.h  Client_Svc_Handler.h  Compartment.cpp  Compartment.h  Connection_Manager.cpp  Connection_Manager.h  CustomMarshaller.cpp  CustomMarshaller.h  Delegate.h  Engine.cpp  Engine.h  Exception.cpp  Exception.h  Formatting.cpp  Formatting.h  Guid.cpp  Guid.h  HttpImpl.cpp  HttpImpl.h  IO.cpp  IO_Wrappers.h  IPS.h  InputStream_CDR.cpp  InputStream_CDR.h  Launch.cpp  LocalTransport.cpp  (+121 more)
src/OORegister/: Makefile.am  OORegister.cbp  OORegister.cpp  OORegister.xml  OORegister_res.rc  OORegister_vc71.vcproj  OORegister_vc8.vcproj  OORegister_vc9.vcproj
src/OOServer/: Channel.cpp  Channel.h  ClientAcceptor.cpp  ClientAcceptor.h  ClientConnection.cpp  ClientConnection.h  Client_Connection.cpp  Client_Connection.h  Database.cpp  Database.h  DebuggerWin32.cpp  EntryPoint.cpp  HostMain.cpp  HostService.cpp  HostSurrogate.cpp  IPSLite.cpp  IPSLite.h  InterProcess.cpp  InterProcess.h  InterProcessService.cpp  InterProcessService.h  Launch.cpp  LocalAcceptor.h  Makefile.am  MessageConnection.cpp  MessageConnection.h  MessagePipe.h  MessagePipe.inl  MessagePipeUnix.cpp  MessagePipeWin32.cpp  MirrorKey.inl  NTService.cpp  NTService.h  NetHttp.cpp  NetHttp.h  NetTcp.cpp  NetTcp.h  OOControlClient.cpp  OOControlClient.h  OOControlService.cpp  (+123 more)
test/: CoreTests.vcxproj  CoreTests.vcxproj.filters  CoreTests_vc10.vcxproj  CoreTests_vc10.vcxproj.filters  CoreTests_vc71.vcproj  CoreTests_vc8.vcproj  CoreTests_vc9.vcproj  Makefile.am  SimpleTest.h  Test.h  UTF-8-test.txt  aggregator.h  any.cpp  compartment.cpp  core.cpp  coretests.sh  interfaces.cpp  interfaces.h  main.cpp  net.cpp  oocominterop.vbs  ooregister.bat  ooregister.sh  registry.cpp  services.cpp  strings.cpp  test.conf
test/COMTest/: AssemblyInfo.vb  COMTest.vbproj  Module1.vb
test/ControlTest/: ControlTest.cpp  ControlTest.vcproj
test/CoreTests/: CoreTests.cbp  CoreTests.vcproj  CoreTests.xml  CoreTests_vc8.vcproj  CoreTests_vc9.vcproj  Makefile.am  SimpleTest.h  Test.cpp  Test.h  TestExe.cbp  TestExe.vcproj  UTF-16-test.txt  any.cpp  apartment.cpp  compartment.cpp  core.cpp  coretests.sh  interfaces.cpp  interfaces.h  main.cpp  net.cpp  registry.cpp  strings.cpp  test.conf
test/Test/: Test.cpp  Test.h  Test.vcproj  Test_Impl.cpp  Test_Impl.h  Test_Service.cpp  Test_Service.h  Test_export.h
test/TestDll/: TestDll.cbp  TestDll.vcproj  main.cpp  testdll.cpp  testdll.h
test/TestExe/: Test.cpp  Test.h  TestExe.cbp  TestExe.vcproj  core.cpp  interfaces.cpp  main.cpp  registry.cpp  strings.cpp
test/TestLibrary/: Makefile.am  TestLibrary.cpp  TestLibrary.vcxproj  TestLibrary_vc10.vcxproj  TestLibrary_vc10.vcxproj.filters  TestLibrary_vc71.vcproj  TestLibrary_vc8.vcproj  TestLibrary_vc9.vcproj
test/TestProcess/: Makefile.am  TestProcess.cpp  TestProcess.vcxproj  TestProcess.vcxproj.filters  TestProcess_vc10.vcxproj  TestProcess_vc71.vcproj  TestProcess_vc8.vcproj  TestProcess_vc9.vcproj
test/TestService/: Makefile.am  TestService.cpp  TestService.vcxproj  TestService.vcxproj.filters
tmp/xml/: .gitignore  Makefile.am  bootstrap.sh  configure.ac
tools/OOCOMLite/: Makefile.am  OOCOMLite.vcxproj  OOCOMLite.vcxproj.filters  OOCOMLite_vc10.vcxproj  OOCOMLite_vc9.vcproj  classfactory.cpp  disp_nspace.cpp  disp_nspace.h  disp_obj.cpp  disp_obj.h  dispatch.h  main.cpp
tools/OOGuidgen/: Makefile.am  OOGuidgen.vcxproj  OOGuidgen_vc10.vcxproj  OOGuidgen_vc10.vcxproj.filters  OOGuidgen_vc9.vcproj  main.cpp  ooguidgen.rc
tools/OOLaunch/: Launch.cpp  Makefile.am
tools/OOReg/: Makefile.am  OOReg.rc  OOReg.vcxproj  OOReg_vc10.vcxproj  OOReg_vc10.vcxproj.filters  OOReg_vc8.vcproj  OOReg_vc9.vcproj  commands.cpp  exception.cpp  main.cpp
tools/OOUuidgen/: Makefile.am  main.cpp  oouuidgen.rc
(+343 files in other folders)
