ACLOCAL_AMFLAGS = -I m4

SUBDIRS = include libltdl src test

reallyclean: maintainer-clean
	rm -rfv Makefile.in
	rm -rfv aclocal.m4
	rm -rfv build-aux/
	rm -rfv configure
	rm -rfv include/Makefile.in
	rm -rfv libltdl/
	rm -rfv m4/argz.m4
	rm -rfv m4/libtool.m4
	rm -rfv m4/ltdl.m4
	rm -rfv m4/ltoptions.m4
	rm -rfv m4/ltsugar.m4
	rm -rfv m4/ltversion.m4
	rm -rfv m4/lt~obsolete.m4
	rm -rfv src/Makefile.in
	rm -rfv src/OOBase/Makefile.in
	rm -rfv src/OOBase/autoheader_dummy.h.in
	rm -rfv src/OOBase/autoheader_dummy.h.in~
	rm -rfv src/OOCore/Makefile.in
	rm -rfv src/OORegister/Makefile.in
	rm -rfv src/OOServer/Makefile.in
	rm -rfv test/CoreTests/Makefile.in
	rm -rfv test/CoreTests/TestLibrary/Makefile.in
	rm -rfv test/CoreTests/TestProcess/Makefile.in
	rm -rfv test/Makefile.in
