ACLOCAL_AMFLAGS = -I m4

SUBDIRS = libltdl include src test

reallyclean: maintainer-clean
	rm -f config.guess config.h.in* config.sub configure
	rm -f depcomp install-sh ltmain.sh missing
	rm -f aclocal.m4
	rm -rfv Makefile.in
	rm -rfv aclocal.m4
	rm -rfv configure
	rm -rfv include/Makefile.in
	rm -f m4/argz.m4
	rm -f m4/libtool.m4
	rm -f m4/ltdl.m4
	rm -f m4/ltoptions.m4
	rm -f m4/ltsugar.m4
	rm -f m4/ltversion.m4
	rm -f m4/lt~obsolete.m4
	rm -f src/Makefile.in
	rm -f src/OOBase/Makefile.in
	rm -f src/OOBase/autoheader_dummy.h.in~
	rm -f src/OOCore/Makefile.in
	rm -f src/OORegister/Makefile.in
	rm -f src/OOServer/Makefile.in
	rm -f test/CoreTests/Makefile.in
	rm -f test/CoreTests/TestLibrary/Makefile.in
	rm -f test/CoreTests/TestProcess/Makefile.in
	rm -f test/Makefile.in
