
nobase_include_HEADERS = \
	OOCore/Preprocessor/base.h \
	OOCore/Preprocessor/comma.h \
	OOCore/Preprocessor/repeat.h \
	OOCore/Preprocessor/sequence.h \
	OOCore/Preprocessor/split.h \
	OOCore/Preprocessor/tuple.h \
	OOCore/Apartment.h \
	OOCore/Base.h \
	OOCore/BaseTypes.h \
	OOCore/config-borland.h \
	OOCore/config-gcc.h \
	OOCore/config-guess.h \
	OOCore/config-msvc.h \
	OOCore/config-win32.h \
	OOCore/Export.h \
	OOCore/Interfaces.h \
	OOCore/OOCore.h \
	OOCore/Remoting.h \
	OOCore/Rtti.h \
	OOCore/Rtti.inl \
	OOCore/Safe.h \
	OOCore/SafePS.h \
	OOCore/Safe.inl \
	OOCore/Service.h \
	OOCore/Threading.h \
	OOCore/Threading.inl \
	OOCore/Types.h \
	OOCore/Types.inl \
	OOCore/Wire.h \
	OOCore/WirePS.h \
	OOCore/Wire.inl \
	OTL/OTL.h \
	OTL/OTL.inl \
	OTL/Exception.h \
	OTL/Registry.h \
	OTL/Remoting.h
