
nobase_include_HEADERS = \
	OOCore/internal/pre_base.h \
	OOCore/internal/comma.h \
	OOCore/internal/repeat.h \
	OOCore/internal/sequence.h \
	OOCore/internal/split.h \
	OOCore/internal/tuple.h \
	OOCore/internal/base.h \
	OOCore/internal/base_types.h \
	OOCore/internal/config-borland.h \
	OOCore/internal/config-gcc.h \
	OOCore/internal/config-guess.h \
	OOCore/internal/config-msvc.h \
	OOCore/internal/config-win32.h \
	OOCore/internal/export.h \
	OOCore/internal/interfaces.h \
	OOCore/internal/rtti.h \
	OOCore/internal/rtti.inl \
	OOCore/internal/safe.h \
	OOCore/internal/safe_ps.h \
	OOCore/internal/safe.inl \
	OOCore/internal/threading.h \
	OOCore/internal/threading.inl \
	OOCore/internal/types.h \
	OOCore/internal/types.inl \
	OOCore/internal/wire.h \
	OOCore/internal/wire_ps.h \
	OOCore/internal/wire.inl \
	OOCore/Apartment.h \
	OOCore/OOCore.h \
	OOCore/Remoting.h \
	OOCore/Service.h \
	OTL/OTL.h \
	OTL/OTL.inl \
	OTL/Exception.h \
	OTL/Registry.h \
	OTL/Remoting.h
