
nobase_include_HEADERS = \
	Omega/internal/cpp/pre_base.h \
	Omega/internal/cpp/comma.h \
	Omega/internal/cpp/repeat.h \
	Omega/internal/cpp/sequence.h \
	Omega/internal/cpp/split.h \
	Omega/internal/cpp/tuple.h \
	Omega/internal/any.h \
	Omega/internal/any.inl \
	Omega/internal/base.h \
	Omega/internal/base_types.h \
	Omega/internal/config-borland.h \
	Omega/internal/config-gcc.h \
	Omega/internal/config-guess.h \
	Omega/internal/config-msvc.h \
	Omega/internal/config-win32.h \
	Omega/internal/export.h \
	Omega/internal/interfaces.h \
	Omega/internal/memory.h \
	Omega/internal/rtti.h \
	Omega/internal/rtti.inl \
	Omega/internal/safe.h \
	Omega/internal/safe_ps.h \
	Omega/internal/safe.inl \
	Omega/internal/string.h \
	Omega/internal/threading.h \
	Omega/internal/threading.inl \
	Omega/internal/types.h \
	Omega/internal/types.inl \
	Omega/internal/wire.h \
	Omega/internal/wire_ps.h \
	Omega/internal/wire.inl \
	Omega/Compartment.h \
	Omega/IO.h \
	Omega/Omega.h \
	Omega/Remoting.h \
	Omega/Service.h \
	Omega/OOCore_version.h \
	OTL/OTL.h \
	OTL/OTL.inl \
	OTL/Exception.h \
	OTL/Registry.h
