
nobase_include_HEADERS = \
	Preprocessor/base.h \
	Preprocessor/comma.h \
	Preprocessor/repeat.h \
	Preprocessor/sequence.h \
	Preprocessor/split.h \
	Preprocessor/tuple.h \
	Apartment.h \
	Base.h \
	config-borland.h \
	config-gcc.h \
	config-guess.h \
	config-msvc.h \
	config-win32.h \
	Export.h \
	Http.h \
	Interfaces.h \
	OOCore.h \
	Remoting.h \
	Rtti.h \
	Rtti.inl \
	Service.h \
	Threading.h \
	Threading.inl \
	Types.h \
	Types.inl \
	TypeSizes.h \
	Wire.h
